--- a/.github/workflows/issue_handler.yaml
+++ b/.github/workflows/issue_handler.yaml
@@ -55,6 +55,9 @@ jobs:
 
           # Run yamllint
           raw_output=$(yamllint --no-warnings -f parsable -c .yamllint /tmp/issue.yaml 2>&1 || true)
+          # Debug: print hex and special chars
+          cat -A /tmp/issue.yaml > /tmp/debug_visible_chars.txt
+          cat /tmp/debug_visible_chars.txt
 
           # Strip the path and format to be cleaner
           yamllint_output=$(echo "$raw_output" | sed 's|/tmp/issue.yaml:|line |')
