--- a/infrastructure/policies/us-west-2/rules.yaml
+++ b/infrastructure/policies/us-west-2/rules.yaml
@@ -1,5 +1,6 @@
 requests:
-  - business_justification: >
+  - request_id: 1234687
+    business_justification: >
       Allow UI access from home. 
     source:
       account_id: 
@@ -19,7 +20,8 @@ requests:
     appid: ssl
     url:  
 
-  - business_justification: >
+  - request_id: 1234687
+    business_justification: >
       Allow SSH access from home. 
     source:
       account_id: 
@@ -39,7 +41,8 @@ requests:
     appid: ssl
     url:  
 
-  - business_justification: >
+  - request_id: 1234687
+    business_justification: >
       Allow ICMP access from home. 
     source:
       account_id: 
@@ -59,7 +62,8 @@ requests:
     appid: ssl
     url:  
 
-  - business_justification: >
+  - request_id: 1234687
+    business_justification: >
       Allow egress access from palo. 
     source:
       account_id: $TEST_ACCOUNT
@@ -79,7 +83,8 @@ requests:
     appid: ssl
     url:  
   
-  - business_justification: >
+  - request_id: 1234687
+    business_justification: >
       EC2 instance needs HTTPS access to thirdparty endpoint.
     source:
       account_id: 
@@ -103,7 +108,8 @@ requests:
     thirdPartyName: DataDog
     enable_palo_inspection: true
 
-  - business_justification: >
+  - request_id: 1234687
+    business_justification: >
       EC2 needs to connect to aws service vpc-endpoints via PrivateLink.
     source:
       account_id: 
@@ -126,7 +132,8 @@ requests:
 
   # From issue #86
   
-  - business_justification: >
+  - request_id: 1234687
+    business_justification: >
       Allow HTTPS access from EC2 to DooDooDog
     source:
       account_id: 
@@ -153,7 +160,8 @@ requests:
 
   # From issue #90
   
-  - business_justification: >
+  - request_id: 1234687
+    business_justification: >
       Allow HTTPS access from EC2 to realoksi vpc-endpoint
     source:
       security_group_ids:
@@ -173,7 +181,8 @@ requests:
 
   # From issue #94
   
-  - business_justification: >
+  - request_id: 1234687
+    business_justification: >
       Allow UI Access from Alternate Source subnet
     source:
       account_id: 
