--- a/infrastructure/policies/us-west-2/sg-request.yaml
+++ b/infrastructure/policies/us-west-2/sg-request.yaml
@@ -4,5 +4,5 @@
     thirdpartyName: MaxBarb
     thirdpartyId: 474833
     accountId: 6666666
-    vpcId: vpc-0c9a555406867d5da
+    vpc_id: vpc-0c9a555406867d5da
     region: eu-west-2
