--- a/infrastructure/policies/us-west-2/rules-request.yaml
+++ b/infrastructure/policies/us-west-2/rules-request.yaml
@@ -1,4 +1,5 @@
-  - business_justification: >
+  - request_id: 1234687
+    business_justification: >
       Allow UI access from home. 
     source:
       account_id: 
@@ -18,7 +19,8 @@
     appid: ssl
     url:  
 
-  - business_justification: >
+  - request_id: 1234687
+    business_justification: >
       Allow SSH access from home. 
     source:
       account_id: 
@@ -38,7 +40,8 @@
     appid: ssl
     url:  
 
-  - business_justification: >
+  - request_id: 1234687
+    business_justification: >
       Allow ICMP access from home. 
     source:
       account_id: 
@@ -58,7 +61,8 @@
     appid: ssl
     url:  
 
-  - business_justification: >
+  - request_id: 1234687
+    business_justification: >
       Allow egress access from palo. 
     source:
       account_id: 12345678
@@ -78,7 +82,8 @@
     appid: ssl
     url:  
   
-  - business_justification: >
+  - request_id: 1234687
+    business_justification: >
       EC2 instance needs HTTPS access to thirdparty endpoint.
     source:
       account_id: 
@@ -102,7 +107,8 @@
     thirdPartyName: DataDog
     enable_palo_inspection: true
 
-  - business_justification: >
+  - request_id: 1234687
+    business_justification: >
       EC2 needs to connect to aws service vpc-endpoints via PrivateLink.
     source:
       account_id: 
@@ -125,7 +131,8 @@
 
   # From issue #86
   
-  - business_justification: >
+  - request_id: 1234687
+    business_justification: >
       Allow HTTPS access from EC2 to DooDooDog
     source:
       account_id: 
@@ -152,7 +159,8 @@
 
   # From issue #90
   
-  - business_justification: >
+  - request_id: 1234687
+    business_justification: >
       Allow HTTPS access from EC2 to realoksi vpc-endpoint
     source:
       security_group_ids:
@@ -172,7 +180,8 @@
 
   # From issue #94
   
-  - business_justification: >
+  - request_id: 1234687
+    business_justification: >
       Allow UI Access from Alternate Source subnet
     source:
       account_id: 
