--- a/.github/ISSUE_TEMPLATE/create-sg.yaml
+++ b/.github/ISSUE_TEMPLATE/create-sg.yaml
@@ -26,7 +26,7 @@ body:
       description: |
         Paste the YAML request below. The format **must match** the structure used in Terraform locals:
       value: |
-          - request_id REQ123456
+          - request_id: REQ123456
             business_justification: >
               Create SG for Datadog VPC endpoint
             thirdpartyName: Datadog
