test better lint output

--- a/.github/workflows/issue_handler.yaml
+++ b/.github/workflows/issue_handler.yaml
@@ -92,7 +92,9 @@ jobs:
             {
               echo "### ❌ Schema validation failed"
               echo ""
+              echo '```txt'
               cat /tmp/schema_output.txt
+              echo '```'
             } >> /tmp/lint_comment.txt
             gh issue comment "${{ github.event.issue.number }}" --body-file /tmp/lint_comment.txt
             exit 1
