--- a/.github/workflows/issue_handler.yaml
+++ b/.github/workflows/issue_handler.yaml
@@ -37,9 +37,9 @@ jobs:
 
           LABELS=$(jq -r '.issue.labels[].name' "$GITHUB_EVENT_PATH")
           if echo "$LABELS" | grep -q 'sg-request'; then
-            echo "target_file=infrastructure/policies/${{ steps.issues_vars.outputs.region }}/sgs.yaml" >> $GITHUB_OUTPUT
+            echo "file_type=sgs" >> "$GITHUB_OUTPUT"
           elif echo "$LABELS" | grep -q 'access-request'; then
-            echo "target_file=infrastructure/policies/${{ steps.issues_vars.outputs.region }}/rules.yaml" >> $GITHUB_OUTPUT
+            echo "file_type=rules" >> "$GITHUB_OUTPUT"
           else
             echo "❌ No recognized label found on issue. Exiting."
             exit 1
@@ -107,7 +107,7 @@ jobs:
 
       - name: Append request to correct file
         run: |
-          FILE="${{ steps.issues_vars.outputs.target_file }}"
+          FILE="infrastructure/policies/${{ steps.issues_vars.outputs.region }}/${{ steps.issues_vars.outputs.file_type }}.yaml"
           ISSUE_BODY=$(jq -r '.issue.body' "$GITHUB_EVENT_PATH")
           ISSUE_NUMBER=$(jq -r '.issue.number' "$GITHUB_EVENT_PATH")
 
@@ -137,7 +137,7 @@ jobs:
         run: |
           ISSUE_ID=${{ github.event.issue.number }}
           BRANCH="issue-${ISSUE_ID}"
-          FILE_CHANGED=$(git status --porcelain | awk '{print $2}')
+          FILE="infrastructure/policies/${{ steps.issues_vars.outputs.region }}/${{ steps.issues_vars.outputs.file_type }}.yaml"
           LABEL=$(jq -r '.issue.labels[0].name' "$GITHUB_EVENT_PATH")
           AUTHOR=$(jq -r '.issue.user.login' "$GITHUB_EVENT_PATH")
 
