--- a/.github/workflows/issue_handler.yaml
+++ b/.github/workflows/issue_handler.yaml
@@ -160,7 +160,7 @@ jobs:
           echo "author=$AUTHOR" >> "$GITHUB_OUTPUT"
           echo "🔎 Detected issue author: $AUTHOR"
           
-          if [ "$AUTHOR" = "drewpypro" ]; then
+          if [ "$AUTHOR" = "blahsadfawerwa3r23rwerwe" ]; then
             echo "✅ Auto-approving PR since author is $AUTHOR"
             gh pr review --approve "$PR_URL"
             gh pr comment "$PR_URL" --body "✅ Auto-approved since this request was submitted by @$AUTHOR"
