--- a/.github/workflows/issue_handler.yaml
+++ b/.github/workflows/issue_handler.yaml
@@ -162,8 +162,8 @@ jobs:
           
           if [ "$AUTHOR" = "blahsadfawerwa3r23rwerwe" ]; then
             echo "✅ Auto-approving PR since author is $AUTHOR"
-            gh pr review --approve "$PR_URL"
-            gh pr comment "$PR_URL" --body "✅ Auto-approved since this request was submitted by @$AUTHOR"
+            gh pr merge "$PR_URL" --merge --delete-branch
+            gh pr comment "$PR_URL" --body "✅ Auto-merged since this request was submitted by @$AUTHOR"
           else
             echo "ℹ️ PR created but not auto-approved. Submitted by @$AUTHOR"
           fi
