--- a/.github/workflows/issue_handler.yaml
+++ b/.github/workflows/issue_handler.yaml
@@ -167,3 +167,12 @@ jobs:
           else
             echo "ℹ️ PR created but not auto-approved. Submitted by @$AUTHOR"
           fi
+      - name: Save issue number artifact for terraform apply workflow
+        run: |
+          echo "${{ github.event.issue.number }}" > issue_number.txt
+        # Upload it for the next workflow
+      - name: Upload issue number
+        uses: actions/upload-artifact@v4
+        with:
+          name: issue-metadata
+          path: issue_number.txt
