--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -40,18 +40,18 @@ jobs:
           aws --endpoint-url ${BUCKET_ENDPOINT} s3api head-object --bucket ${BUCKET_NAME} --key test/poop.txt || \
           (echo "❌ Backend validation failed. Check credentials or filepath." && exit 1)
 
-      - name: Inject IPs into policy YAML
-        run: |
-          sed -i "s|\\\$HOME_IP|${{ secrets.HOME_IP }}|g" policies/us-west-2/rules.yaml
-          sed -i "s|\\\$ALTERNATE_SOURCE|${{ secrets.ALTERNATE_SOURCE }}|g" policies/us-west-2/rules.yaml
-          IP=$(curl -s ifconfig.me)
-          echo "Runner public IP: $IP"
-          aws ec2 authorize-security-group-ingress \
-            --region us-west-2 \
-            --group-id "sg-0b5d6e2811145808d" \
-            --protocol tcp \
-            --port "22-443" \
-            --cidr "${IP}/32" > /dev/null
+      # - name: Inject IPs into policy YAML
+      #   run: |
+      #     sed -i "s|\\\$HOME_IP|${{ secrets.HOME_IP }}|g" policies/us-west-2/rules.yaml
+      #     sed -i "s|\\\$ALTERNATE_SOURCE|${{ secrets.ALTERNATE_SOURCE }}|g" policies/us-west-2/rules.yaml
+      #     IP=$(curl -s ifconfig.me)
+      #     echo "Runner public IP: $IP"
+      #     aws ec2 authorize-security-group-ingress \
+      #       --region us-west-2 \
+      #       --group-id "sg-0b5d6e2811145808d" \
+      #       --protocol tcp \
+      #       --port "22-443" \
+      #       --cidr "${IP}/32" > /dev/null
           
       - name: Terraform Init
         run: |
@@ -70,45 +70,45 @@ jobs:
         run: |
           terraform apply -input=false tfplan
 
-      - name: Cleanup SG rule
-        if: always()
-        run: |
-          IP=$(curl -s ifconfig.me)
-          echo "Runner public IP: $IP"
-          if [[ -n "$IP" ]]; then
-            echo "Revoking IP: $IP"
-            aws ec2 revoke-security-group-ingress \
-              --region us-west-2 \
-              --group-id "sg-0b5d6e2811145808d" \
-              --protocol tcp \
-              --port "22-443" \
-              --cidr "${IP}/32" || echo "⚠️ Failed to revoke IP, possibly already removed."
-          else
-            echo "⚠️ IP variable not found. Skipping revoke."
-          fi
+      # - name: Cleanup SG rule
+      #   if: always()
+      #   run: |
+      #     IP=$(curl -s ifconfig.me)
+      #     echo "Runner public IP: $IP"
+      #     if [[ -n "$IP" ]]; then
+      #       echo "Revoking IP: $IP"
+      #       aws ec2 revoke-security-group-ingress \
+      #         --region us-west-2 \
+      #         --group-id "sg-0b5d6e2811145808d" \
+      #         --protocol tcp \
+      #         --port "22-443" \
+      #         --cidr "${IP}/32" || echo "⚠️ Failed to revoke IP, possibly already removed."
+      #     else
+      #       echo "⚠️ IP variable not found. Skipping revoke."
+      #     fi
 
-      - name: Download issue number artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: issue-metadata
+      # - name: Download issue number artifact
+      #   uses: actions/download-artifact@v4
+      #   with:
+      #     name: issue-metadata
 
-      - name: Extract newly created SGs
-        run: |
-          terraform show -json tfplan | jq -r '
-            .resource_changes[]
-            | select(.type == "aws_security_group")
-            | select(.change.actions[] == "create")
-            | "\(.change.after.tags.ThirdParty)-\(.change.after.tags.ThirdPartyId): \(.change.after.id)"
-          ' > sg_ids.txt
+      # - name: Extract newly created SGs
+      #   run: |
+      #     terraform show -json tfplan | jq -r '
+      #       .resource_changes[]
+      #       | select(.type == "aws_security_group")
+      #       | select(.change.actions[] == "create")
+      #       | "\(.change.after.tags.ThirdParty)-\(.change.after.tags.ThirdPartyId): \(.change.after.id)"
+      #     ' > sg_ids.txt
 
-      - name: Comment SGs on Issue
-        env:
-          GH_TOKEN: ${{ secrets.PAT_GITHUB_ACTIONS }}
-        run: |
-          ISSUE_ID=$(cat issue_number.txt)
-          echo "### ✅ Created Security Groups" > comment.txt
-          echo '```' >> comment.txt
-          cat sg_ids.txt >> comment.txt
-          echo '```' >> comment.txt
-          gh issue comment "$ISSUE_ID" --body-file comment.txt
+      # - name: Comment SGs on Issue
+      #   env:
+      #     GH_TOKEN: ${{ secrets.PAT_GITHUB_ACTIONS }}
+      #   run: |
+      #     ISSUE_ID=$(cat issue_number.txt)
+      #     echo "### ✅ Created Security Groups" > comment.txt
+      #     echo '```' >> comment.txt
+      #     cat sg_ids.txt >> comment.txt
+      #     echo '```' >> comment.txt
+      #     gh issue comment "$ISSUE_ID" --body-file comment.txt
  
