--- a/infrastructure/policies/us-west-2/rules.yaml
+++ b/infrastructure/policies/us-west-2/rules.yaml
@@ -7,6 +7,29 @@
 #       vpc_id: 
 #       region: 
 #       security_group_ids:
+#       ips: [69.69.69.69/32]
+#     destination:
+#       account_id: 
+#       vpc_id: 
+#       region: 
+#       security_group_ids:
+#       ips: [[69.69.69.69/32]]
+#     protocol: tcp
+#     port: 443
+#     appid: ssl
+#     url_category: api.datadoghq.com
+#     thirdPartyID: 123456
+#     thirdPartyName: DataDog
+#     enable_palo_inspection: true
+
+#   - request_id: 1234687
+#     business_justification: >
+#       Allow UI access from home. 
+#     source:
+#       account_id: 
+#       vpc_id: 
+#       region: 
+#       security_group_ids:
 #       ips: [$HOME_IP]
 #     destination:
 #       account_id: $TEST_ACCOUNT
