--- a/infrastructure/policies/us-west-2/sgs.yaml
+++ b/infrastructure/policies/us-west-2/sgs.yaml
@@ -1,20 +1,21 @@
-# requests:
-#   - request_id: 1234687
-#     business_justification: >
-#       Create security-group for datadog privatelink in us-west-2
-#     thirdpartyName: Datadog
-#     thirdpartyId: 1234567
-#     accountId: 6666666
-#     vpc_id: vpc-0c9a555406867d5da
-#     region: us-west-2
-#   - request_id: 1234687
-#     business_justification: >
-#       Create security-group for mongoDB privatelink in us-west-2
-#     thirdpartyName: MongoDB
-#     thirdpartyId: 456748
-#     accountId: 6666666
-#     vpc_id: vpc-0c9a555406867d5da
-#     region: us-west-2
+requests:
+  - request_id: 1234687
+    business_justification: >
+      Create security-group for datadog privatelink in us-west-2
+    thirdpartyName: Datadog
+    thirdpartyId: 1234567
+    accountId: 6666666
+    vpc_id: vpc-0c9a555406867d5da
+    region: us-west-2
+
+  # - request_id: 1234687
+  #   business_justification: >
+  #     Create security-group for mongoDB privatelink in us-west-2
+  #   thirdpartyName: MongoDB
+  #   thirdpartyId: 456748
+  #   accountId: 6666666
+  #   vpc_id: vpc-0c9a555406867d5da
+  #   region: us-west-2
 
 
 #   # From issue #76
