--- a/infrastructure/policies/mongo-76543-us-west-2-policy.yaml
+++ b/infrastructure/policies/mongo-76543-us-west-2-policy.yaml
@@ -4,7 +4,7 @@ security_group:
     Create security-group for MongoDB online archive privatelink in us-west-2
   accountId: 6666666
   region: us-west-2
-  vpc_id: vpc-ddd
+  vpc_id: vpc-014a623d564aa2524
   serviceType: privatelink-consumer
   serviceName: com.amazonaws.vpce.us-west-2.vpce-svc-mongodb2349873
   thirdpartyName: MongoDB
