--- a/infrastructure/policies/provider-app1-us-east-1-policy.yaml
+++ b/infrastructure/policies/provider-app1-us-east-1-policy.yaml
@@ -4,7 +4,7 @@ security_group:
     Create security-group to expose `app-zyx` behind NLB over PrivateLink in us-east-1.
   accountId: 6666666
   region: us-east-1
-  vpc_id: vpc-ccc
+  vpc_id: vpc-0f0330876868cc9d2
   serviceType: privatelink-provider
   internalAppID: app-zyx
 
