--- a/infrastructure/policies/provider-app1-us-west-2-policy.yaml
+++ b/infrastructure/policies/provider-app1-us-west-2-policy.yaml
@@ -4,7 +4,7 @@ security_group:
     Create security-group to expose `app-zyx` behind NLB over PrivateLink in us-west-2.
   accountId: 6666666
   region: us-west-2
-  vpc_id: vpc-ddd
+  vpc_id: vpc-014a623d564aa2524
   serviceType: privatelink-provider
   internalAppID: app-zyx
 
